--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@hapi/joi-date": "^2.0.1",
+    "@sendgrid/mail": "^7.1.1",
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "chalk": "^4.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "fs-extra": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
-    "sharp": "^0.25.2"
+    "sharp": "^0.25.2",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
