--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sharp": "^0.25.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
