--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@hapi/joi": "^17.1.1",
     "@hapi/joi-date": "^2.0.1",
     "@sendgrid/mail": "^7.1.1",
+    "aws-sdk": "^2.698.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
@@ -27,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
-    "sharp": "^0.25.2",
+    "node-pre-gyp": "^0.15.0",
+    "sharp": "^0.25.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uuid": "^8.0.0"
