--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "sweetalert2": "^9.15.1",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
+    "vue-image-crop-upload": "^2.5.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
